# pa3_aa

./: README.md  main.py  pyproject.toml
examples/: example_k10_l10_1774893852.2911022.in  example_k10_l10_1774893852.2911022.out  example_k3_a12_b20_1774987794.7819915.out  example_n0_k5_a26_b32_1775250666.0170565.in  example_n1_k5_a47_b31_1775250666.0176668.in  example_n2_k5_a45_b28_1775250666.0182147.in  example_n3_k5_a38_b29_1775250666.0186272.in  example_n4_k5_a42_b37_1775250666.0191324.in  example_n5_k5_a50_b28_1775250666.0195239.in  example_n6_k5_a32_b37_1775250666.0200167.in  example_n7_k5_a49_b36_1775250666.020489.in  example_n8_k5_a47_b32_1775250666.0209846.in  example_n9_k5_a27_b44_1775250666.0215.in
src/: automated_example_generator.py  example_generator.py  main.py  runtime_grapher.py
